updated with request tab section button align issue

--- a/src/styles/my-request-cards.css
+++ b/src/styles/my-request-cards.css
@@ -1,6 +1,6 @@
 .sub-header{
     background: white;
-    widows: 100%;
+    width: 100%;
     padding: 0 20px;
     
 }
